<resources>
    <string name="app_name">Android_live_Firebase_Chat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="to_register">To Register</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="back">Back</string>
    <string name="logout">Logout</string>
    <string name="type_here">Type here …</string>
    <string name="send">Send</string>
    <string name="chats">Chats</string>
    <string name="chat_message_out">Chat Message Out</string>
    <string name="chat_message_in">Chat Message In</string>
</resources>